--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,12 @@ __pycache__/
 
 # aider
 .aider*
+.aider.chat.history.md
+.aider.ident.cache.v1/
+.aider.input.history
+
+# VS code workspace
+facilitator.code-workspace
 
 # Distribution / packaging
 .Python
@@ -102,7 +108,7 @@ ipython_config.py
 #   This is especially recommended for binary packages to ensure reproducibility, and is more
 #   commonly ignored for libraries.
 #   https://python-poetry.org/docs/basic-usage/#commit-your-poetrylock-file-to-version-control
-#poetry.lock
+poetry.lock
 
 # pdm
 #   Similar to Pipfile.lock, it is generally recommended to include pdm.lock in version control.
